UX improvement, render map before the long table to avoid layout shift.

--- a/webadmin/src/main/webapp/occurrences.css
+++ b/webadmin/src/main/webapp/occurrences.css
@@ -21,7 +21,7 @@ div.inactive {opacity:0.3; }
 #alloccurrences,#warningpanel {transition: opacity 0.5s, transform 0.5s;}
 
 html.occurrencespage, body.occurrencespage {width:100%; height:100%; overflow:auto;}
-body.occurrencespage {display:flex; height: 100%; align-items: stretch;}
+body.occurrencespage {display:flex; height: 100%; align-items: stretch; flex-direction:row-reverse}
 body.occurrencespage .warning:not(.floating) {position: static; width:auto;}
 body.occurrencespage .warning.floating {z-index:1002}
 body.occurrencespage h2 {background-color: #1565c0; color: white; margin: 0}
